🪾 form_2FA => 🐛 fix overflow

--- a/apps/client/src/styles/globals.css
+++ b/apps/client/src/styles/globals.css
@@ -341,7 +341,7 @@
 }
 
 .form__shape {
-  @apply w-full mx-auto max-w-[800px] h-fit rounded-xl border-3 border-neutral-300 pb-5;
+  @apply w-full mx-auto max-w-[800px] h-fit rounded-xl border-3 border-neutral-300 pb-5 overflow-hidden;
 }
 
 .form__body {
